--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "gatsby": "^2.15.9",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-manifest": "^2.2.14",
+    "gatsby-plugin-netlify": "^2.1.22",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.2.20",
-    "gatsby-source-contentful": "^2.1.36",
     "gatsby-source-filesystem": "^2.1.21",
     "gatsby-transformer-sharp": "^2.2.13",
     "node-sass": "^4.12.0",
