--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.1",
     "gatsby-image": "^2.2.29",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
+    "gatsby-plugin-google-gtag": "^1.1.14",
     "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-netlify": "^2.1.22",
     "gatsby-plugin-offline": "^3.0.16",
