--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-spring": "^8.0.27",
+    "react-waypoint": "^9.0.2"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
